# CNApy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  TODO.txt  cnapy.py  environment.yml  pyproject.toml  run.sh  setup.py  test_moma.py  testscript.py
.github/workflows/: ci-test.yml
cnapy/: __main__.py  appdata.py  application.py  core.py  core_gui.py  flux_sampling.py  flux_vector_container.py  moma.py  resources.qrc  utils.py  utils_for_cnapy_api.py
cnapy/agents/: __init__.py  agent_registry.py  base_agent.py  crewai_orchestrator.py  data_query_agent.py  flux_analysis_agent.py  gene_analysis_agent.py  orchestrator_agent.py  predefined_scenarios.py  scenario_manager_agent.py  strain_knowledge_agent.py
cnapy/agents/config/: agents.yaml  tasks.yaml
cnapy/data/: escher.min.js  escher_cnapy.html
cnapy/gui_elements/: about_dialog.py  agent_dialog.py  annotation_widget.py  batch_moma_room_dialog.py  box_position_dialog.py  central_widget.py  clipboard_calculator.py  config_cobrapy_dialog.py  config_dialog.py  configuration_cplex.py  configuration_gurobi.py  download_dialog.py  dynamic_fba_dialog.py  efm_dialog.py  efmtool_dialog.py  escher_map_view.py  filterable_combobox.py  flux_data_dialog.py  flux_feasibility_dialog.py  flux_optimization_dialog.py  flux_response_dialog.py  flux_sampling_dialog.py  fseof_dialog.py  fvseof_dialog.py  gene_essentiality_dialog.py  gene_list.py  in_out_flux_dialog.py  llm_analysis_dialog.py  main_window.py  map_view.py  mcs_dialog.py  media_management_dialog.py  metabolite_list.py  mode_navigator.py  model_info.py  model_management_dialog.py  moma_room_reference_dialog.py  omics_integration_dialog.py  plot_customization_dialog.py  plot_space_dialog.py  (+11 more)
cnapy/tests/: __init__.py  conftest.py  test.py  test_appdata.py  test_core.py  test_flux_sampling.py  test_flux_vector_container.py  test_moma.py
cnapy/tests/test_agents/: __init__.py  conftest.py  test_agent_dialog.py  test_agent_registry.py  test_base_agent.py  test_crewai_orchestrator.py  test_data_query_agent.py  test_flux_analysis_agent.py  test_gene_analysis_agent.py  test_orchestrator_agent.py  test_parametric_analysis.py  test_scenario_manager_agent.py  test_strain_knowledge_agent.py
docs/assets/css/: style.scss
test_data/: LAD.py  Simulator.py  e_coli_core.Core metabolism.json
