[project]
name = "cnapy"
version = "1.2.7"
authors = [
  { name="Sven Thiele" },
  { name="Axel von Kamp" },
  { name="Pavlos Stephanos Bekiaris" },
  { name="Philipp Schneider" }
]
description = "An integrated environment for metabolic network analysis."
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs>=1.4",
    "matplotlib>=3.6",
    "requests>=2.28",
    "cobra>=0.30",
    "qtpy>=2.3",
    "pyqtwebengine>=5.15",
    "numpy==1.23",
    "scipy==1.12",
    "gurobipy>=12.0",
    "openpyxl",
    "setuptools",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.25",
    "openai>=1.0",
    "google-generativeai>=0.3",
]
ai-agents = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "anthropic>=0.25",
    "openai>=1.0",
]
dev = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["cnapy/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "-ra"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_milp: requires a MILP solver",
    "requires_efmtool: requires efmtool_link package",
    "requires_crewai: requires CrewAI and LLM API key",
]

[tool.coverage.run]
source = ["cnapy"]
omit = [
    "cnapy/tests/*",
    "cnapy/resources.py",
    "cnapy/gui_elements/*",
    "cnapy/__main__.py",
    "cnapy/application.py",
    "cnapy/core_gui.py",
    "cnapy/utils.py",
    "cnapy/utils_for_cnapy_api.py",
]

[tool.coverage.report]
fail_under = 30
# Note: Target is 30% initially due to Qt-dependent code paths in appdata.py and core.py
# The tested modules (moma.py, flux_sampling.py, flux_vector_container.py) have 70-98% coverage

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["cnapy/resources.py", "test_data/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E402",  # Module level import not at top - required for Qt plugin setup
    "E501",  # Line too long - existing codebase has many long lines
    "E712",  # Avoid equality comparisons to False - existing pattern in codebase
    "E721",  # Use is/is not for type comparisons - existing pattern in codebase
    "E741",  # Ambiguous variable name - existing pattern in codebase
    "B006",  # Do not use mutable data structures for argument defaults - existing pattern
    "B007",  # Loop control variable not used - existing pattern in codebase
    "B018",  # Found useless expression - existing pattern in codebase
    "B023",  # Function definition does not bind loop variable - existing pattern
    "B904",  # raise ... from err - existing pattern in codebase
    "F403",  # Star imports - required for straindesign compatibility
    "F405",  # May be undefined from star imports - required for straindesign compatibility
    "F841",  # Local variable assigned but never used - existing pattern in codebase
    "UP008", # Use super() instead of super(__class__, self) - existing pattern
    "UP031", # Use format specifiers instead of percent format - existing pattern
    "UP038", # Use X | Y in isinstance call - existing pattern (pre-commit ruff 0.8.6)
]

[project.scripts]
cnapy = "cnapy.__main__:main_cnapy"
[project.urls]
Homepage = "https://github.com/cnapy-org/CNApy"
Issues = "https://github.com/cnapy-org/CNApy/issues"
